changed small correction on mobile responsive

--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,6 @@
     padding: 0;
     box-sizing: border-box;
     text-decoration: none;
-    color: var(--text-color);
 }
 @font-face {
     font-family: "adelia" ;
@@ -26,6 +25,9 @@ h2, p, a, label, .submit {
     font-family: 'Gloria Hallelujah', cursive;
     font-size: 20px;
     color: var(--text-color);
+    text-decoration: none;
+}
+a {
     text-decoration: none;
 }
 /* ---------- BODY */
@@ -51,6 +53,9 @@ header nav a {
     font-size: 20px;
     margin: 0 10px;
 }
+header nav a:hover {
+    color: var(--text-color);
+}
 /* ----- portfolio */
 #portfolio {
     display: flex;
@@ -60,8 +65,8 @@ header nav a {
 }
 #portfolio img {
     display: inline;
-    height: 350px;
-    width: 350px;
+    height: 320px;
+    width: 320px;
     margin-right: 15px;
     border-radius: 15px;
 }
@@ -74,6 +79,12 @@ header nav a {
     margin: auto;
     height: 288px;
     width: 288px;
+}
+#books article a #book2 {
+    display: block;
+    margin: auto;
+    height: 288px;
+    width: 230px;
 }
 #books article a {
     height: 288px;
@@ -92,7 +103,7 @@ header nav a {
 }
 #interview p {
     height: 300px;
-    width: 380px;
+    width: 360px;
     overflow: auto;
     padding-left: 15px;
     text-align: justify;
@@ -143,13 +154,3 @@ footer {
         margin: 0;
     } */
 }
-
-/* @media screen and (min-width: 992px) {
-    header>h1 {
-        font-size: 60px;
-    }
-     header>img {
-        height: 148.5px;
-        width: 105px;
-    }
-} */
